iroha_ffi/derive/tests/ui_fail/fallible_transmute_mut_ref.stderr
error[E0277]: the trait bound `Wrapper: InfallibleTransmute` is not satisfied
  --> tests/ui_fail/fallible_transmute_mut_ref.rs:21:1
   |
21 | #[ffi_export]
   | ^^^^^^^^^^^^^ the trait `InfallibleTransmute` is not implemented for `Wrapper`, which is required by `&mut Wrapper: FfiType`
   |
   = help: the following other types implement trait `InfallibleTransmute`:
             ManuallyDrop<T>
             [R; N]
             i16
             i32
             i64
             i8
             u16
             u32
           and $N others
   = note: required for `&mut Wrapper` to implement `Ir`
   = note: required for `&mut Wrapper` to implement `FfiType`
   = note: this error originates in the attribute macro `ffi_export` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&mut Wrapper: FfiConvert<'_, *mut u32>` is not satisfied
  --> tests/ui_fail/fallible_transmute_mut_ref.rs:22:32
   |
21 | #[ffi_export]
   | ------------- required by a bound introduced by this call
22 | pub fn take_non_robust_ref_mut(_ffi_struct: &mut Wrapper) {}
   |                                ^^^^^^^^^^^ the trait `InfallibleTransmute` is not implemented for `Wrapper`, which is required by `&mut Wrapper: FfiConvert<'_, *mut u32>`
   |
   = help: the following other types implement trait `InfallibleTransmute`:
             ManuallyDrop<T>
             [R; N]
             i16
             i32
             i64
             i8
             u16
             u32
           and $N others
   = note: required for `&mut Wrapper` to implement `Ir`
   = note: required for `&mut Wrapper` to implement `FfiConvert<'_, *mut u32>`
